# manga_epub_creator

./: Cargo.toml  tailwind.config.js
docs/: result-example.json
src/: configuration.rs  epub_bundler.rs  image_downloader.rs  input.css  main.rs  request_handler.rs  utils.rs
